Squash bugs, begin work on styling

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,7 +1,10 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-h1 {
-  color: orange;
-  font-size: 48px;
+header {
+
+  h1 {
+    color: black;
+    font-size: 48px;
+  }
 }
